fixed vertical cross alignement on the modal

--- a/src/components/Course/LessonView/ActionButtons/AddReflectionModal.module.scss
+++ b/src/components/Course/LessonView/ActionButtons/AddReflectionModal.module.scss
@@ -9,7 +9,6 @@
 .closeIcon {
   color: var(--color-text-default);
   padding-block-start: 0;
-  margin-block-start: var(--spacing-small-px);
 }
 
 .modalContent {
